# AscendPathTracing

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakeLists.txt.bk  Dockerfile  Pystd-64x64-1ssp.ppm  README.md  color.ppm  color_bound1.ppm  common.h  compose.yaml  data_utils.h  main.cpp  problem.md  render.cpp  render_cpu  run.sh  xmake.lua
cmake/cpu/: CMakeLists.txt
cmake/npu/: CMakeLists.txt
scripts/: data_visualization.py  gen_data.py
src/: allocator.cpp  allocator.h  common.h  main.cpp  render.cpp  rt_helper.h
toolchains/cpu/: xmake.lua
